rendered/envs/alpha/argocd/ingressroute-argocd-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: argocd-lan
  namespace: argocd
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lan.zebradil.dev`) || Host(`argocd.junior.lan.zebradil.dev`) || Host(`argocd.zebradil.dev`) || Host(`argocd.junior.zebradil.dev`)
      services:
        - name: argocd-server
          port: http
